--- a/client/src/app/site/assignments/components/assignment-detail/assignment-detail.component.html
+++ b/client/src/app/site/assignments/components/assignment-detail/assignment-detail.component.html
@@ -155,15 +155,19 @@
                     >
                         <!-- implicit item references into the component using ng-template slot -->
                         <ng-template let-item>
-                            <span *ngIf="hasPerms('manage')">
-                                <button
-                                    mat-icon-button
-                                    matTooltip="{{ 'Remove candidate' | translate }}"
-                                    (click)="removeUser(item)"
-                                >
-                                    <mat-icon>clear</mat-icon>
-                                </button>
-                            </span>
+                            <div class="single-candidate-line">
+                                <span *ngIf="hasPerms('manage')"> {{ item.getTitle() }} </span>
+
+                                <span *ngIf="hasPerms('manage')">
+                                    <button
+                                        mat-icon-button
+                                        matTooltip="{{ 'Remove candidate' | translate }}"
+                                        (click)="removeUser(item)"
+                                    >
+                                        <mat-icon>clear</mat-icon>
+                                    </button>
+                                </span>
+                            </div>
                         </ng-template>
                     </os-sorting-list>
                 </div>
