--- a/client/src/app/site/motions/modules/motion-detail/components/manage-submitters/manage-submitters.component.scss
+++ b/client/src/app/site/motions/modules/motion-detail/components/manage-submitters/manage-submitters.component.scss
@@ -20,6 +20,17 @@ h4 {
     }
 }
 
+.single-submitter-line {
+    display: grid;
+    grid-template-columns: auto min-content;
+    grid-column-gap: 0.5em;
+    margin-right: 0.5em;
+
+    span {
+        margin: auto 0;
+    }
+}
+
 .user .mat-chip {
     border-radius: 16px !important;
     padding: 5px 15px !important;
