--- a/client/src/app/slides/agenda/common/common-list-of-speakers-slide.component.html
+++ b/client/src/app/slides/agenda/common/common-list-of-speakers-slide.component.html
@@ -17,7 +17,9 @@
         <div *ngFor="let speaker of data.data.finished">
             {{ speaker.user }}
             <mat-icon *ngIf="speaker.marked">star</mat-icon>
-            <mat-icon *ngIf="speaker.point_of_order" color="warn"> warning</mat-icon>
+            <mat-icon *ngIf="speaker.pro_speech === true" class="green-text">add_circle</mat-icon>
+            <mat-icon *ngIf="speaker.pro_speech === false" class="red-warning-text">remove_circle</mat-icon>
+            <mat-icon *ngIf="speaker.point_of_order" color="warn">warning</mat-icon>
         </div>
     </div>
 
@@ -26,7 +28,9 @@
         <mat-icon class="micicon">mic</mat-icon>
         {{ data.data.current.user }}
         <mat-icon *ngIf="data.data.current.marked">star</mat-icon>
-        <mat-icon *ngIf="data.data.current.point_of_order" color="warn"> warning</mat-icon>
+        <mat-icon *ngIf="data.data.current.pro_speech === true" class="green-text">add_circle</mat-icon>
+        <mat-icon *ngIf="data.data.current.pro_speech === false" class="red-warning-text">remove_circle</mat-icon>
+        <mat-icon *ngIf="data.data.current.point_of_order" color="warn">warning</mat-icon>
     </div>
 
     <!-- Next speakers -->
@@ -35,7 +39,9 @@
             <li *ngFor="let speaker of data.data.waiting">
                 {{ speaker.user }}
                 <mat-icon *ngIf="speaker.marked">star</mat-icon>
-                <mat-icon *ngIf="speaker.point_of_order" color="warn"> warning</mat-icon>
+                <mat-icon *ngIf="speaker.pro_speech === true" class="green-text">add_circle</mat-icon>
+                <mat-icon *ngIf="speaker.pro_speech === false" class="red-warning-text">remove_circle</mat-icon>
+                <mat-icon *ngIf="speaker.point_of_order" color="warn">warning</mat-icon>
             </li>
         </ol>
     </div>
