--- a/client/src/app/shared/components/list-of-speakers-content/list-of-speakers-content.component.html
+++ b/client/src/app/shared/components/list-of-speakers-content/list-of-speakers-content.component.html
@@ -20,7 +20,9 @@
                 <div class="finished-speaker-grid">
                     <div class="number">{{ number + 1 }}.</div>
                     <div class="name">{{ speaker.getTitle() }}</div>
-                    <div class="point-of-order" *ngIf="speaker.point_of_order"><mat-icon color="warn">warning</mat-icon></div>
+                    <div class="point-of-order" *ngIf="speaker.point_of_order">
+                        <mat-icon color="warn">warning</mat-icon>
+                    </div>
                     <div class="time">
                         {{ durationString(speaker) }} ({{ 'Start time' | translate }}: {{ startTimeToString(speaker) }})
                     </div>
@@ -49,10 +51,24 @@
             <mat-icon>mic</mat-icon>
         </span>
 
-        <span class="name">{{ activeSpeaker.getListTitle() }}</span>
+        <span class="name">
+            {{ activeSpeaker.getListTitle() }}
+            <div class="active-speaker-subtitle">
+                <i *ngIf="activeSpeaker.pro_speech === true">
+                    {{ 'Pro speech' | translate }}
+                </i>
+
+                <i *ngIf="activeSpeaker.pro_speech === false">
+                    {{ 'Contra speech' | translate }}
+                </i>
+
+                <i *ngIf="activeSpeaker.marked">
+                    {{ 'Contribution' | translate }}
+                </i>
+            </div>
+        </span>
 
         <span class="suffix">
-
             <!-- point of order visible for everyone -->
             <button
                 mat-icon-button
@@ -84,70 +100,136 @@
         >
             <!-- implicit speaker references into the component using ng-template slot -->
             <ng-template let-speaker>
-                <span *osPerms="'agenda.can_manage_list_of_speakers'; and: !speaker.point_of_order">
-                    <!-- Speaker count -->
-                    <span *ngIf="hasSpokenCount(speaker)" class="red-warning-text speaker-warning">
-                        {{ hasSpokenCount(speaker) + 1 }}. <span>{{ 'contribution' | translate }}</span>
-                    </span>
+                <div class="single-speaker-line">
+                    <div class="speaker-name">
+                        <!-- Speaker name -->
+                        <div>
+                            {{ speaker.getTitle() }}
+                        </div>
+                        <!-- Extra line -->
+                        <ng-container>
+                            <!-- Pro Contra Mark  -->
+                            <ng-container *ngIf="speaker.pro_speech === true">
+                                <mat-icon inline class="inline-icon-text-align green-text"> add_circle </mat-icon>
+                                <i class="user-subtitle">
+                                    {{ 'Pro speech' | translate }}
+                                </i>
+                            </ng-container>
 
-                    <!-- First contribution -->
-                    <span
-                        *ngIf="showFistContributionHint && isFirstContribution(speaker)"
-                        class="red-warning-text speaker-warning"
-                    >
-                        {{ 'First speech' | translate }}
-                    </span>
+                            <ng-container *ngIf="speaker.pro_speech === false">
+                                <mat-icon inline class="inline-icon-text-align red-warning-text">
+                                    remove_circle
+                                </mat-icon>
+                                <i class="user-subtitle">
+                                    {{ 'Contra speech' | translate }}
+                                </i>
+                            </ng-container>
 
-                    <!-- Speaker gender -->
-                    <span *ngIf="speaker.gender">({{ speaker.gender | translate }})</span>
-                </span>
+                            <ng-container *ngIf="speaker.marked">
+                                <mat-icon inline class="inline-icon-text-align icon">star</mat-icon>
+                                <i class="user-subtitle">
+                                    {{ 'Contribution' | translate }}
+                                </i>
+                            </ng-container>
 
-                <!-- Start, start and delete buttons -->
-                <span>
-                    <!-- start button -->
-                    <button
-                        mat-icon-button
-                        matTooltip="{{ 'Begin speech' | translate }}"
-                        (click)="onStartButton(speaker)"
-                        *osPerms="'agenda.can_manage_list_of_speakers'"
-                    >
-                        <mat-icon>play_arrow</mat-icon>
-                    </button>
+                            <!-- Point Of Order and note -->
+                            <ng-container>
+                                <mat-icon
+                                    inline
+                                    color="warn"
+                                    class="inline-icon-text-align"
+                                    *ngIf="speaker.point_of_order"
+                                    >warning</mat-icon
+                                >
+                                <i *ngIf="showSpeakersOrderNote" class="red-warning-text">
+                                    {{ speaker.note }}
+                                </i>
+                            </ng-container>
+                        </ng-container>
+                    </div>
+                    <div class="speaker-controls one-line">
+                        <!-- Extra stuff: Spoken Count, Gender, 1st Contribution -->
+                        <span *osPerms="permission.agendaCanManageListOfSpeakers; and: !speaker.point_of_order">
+                            <!-- Speaker count -->
+                            <span *ngIf="hasSpokenCount(speaker)" class="red-warning-text speaker-warning">
+                                {{ hasSpokenCount(speaker) + 1 }}. <span>{{ 'contribution' | translate }}</span>
+                            </span>
 
-                    <!-- star button -->
-                    <button
-                        mat-icon-button
-                        matTooltip="{{ 'Mark speaker' | translate }}"
-                        (click)="onMarkButton(speaker)"
-                        *osPerms="'agenda.can_manage_list_of_speakers'; and: !speaker.point_of_order"
-                    >
-                        <mat-icon>{{ speaker.marked ? 'star' : 'star_border' }}</mat-icon>
-                    </button>
+                            <!-- First contribution -->
+                            <span
+                                *ngIf="showFistContributionHint && isFirstContribution(speaker)"
+                                class="red-warning-text speaker-warning"
+                            >
+                                {{ 'First speech' | translate }}
+                            </span>
 
-                    <!-- point of order visible for everyone -->
-                    <button
-                        mat-icon-button
-                        matTooltip="{{ 'Point of order' | translate }}"
-                        *ngIf="speaker.point_of_order"
-                    >
-                        <mat-icon color="warn"> warning </mat-icon>
-                    </button>
+                            <!-- Speaker gender -->
+                            <span *ngIf="speaker.gender">({{ speaker.gender | translate }})</span>
+                        </span>
 
-                    <!-- delete button -->
-                    <button
-                        mat-icon-button
-                        matTooltip="{{ 'Remove' | translate }}"
-                        (click)="removeSpeaker(speaker)"
-                        *osPerms="'agenda.can_manage_list_of_speakers'"
-                    >
-                        <mat-icon>close</mat-icon>
-                    </button>
-                </span>
+                        <!-- For normal users -->
+                        <span *osPerms="permission.agendaCanManageListOfSpeakers; complement: true">
+                            <ng-container *ngIf="speakerIsOperator(speaker)">
+                                <!-- pro -->
+                                <button
+                                    mat-icon-button
+                                    (click)="onProContraButtons(speaker, true)"
+                                    matTooltip="{{ 'Pro speech' | translate }}"
+                                    *ngIf="enableProContraSpeech && !speaker.point_of_order"
+                                >
+                                    <mat-icon class="user-subtitle" *ngIf="speaker.pro_speech !== true"> add_circle_outline </mat-icon>
+                                    <mat-icon class="green-text" *ngIf="speaker.pro_speech === true">
+                                        add_circle
+                                    </mat-icon>
+                                </button>
 
-                <!-- For thouse without LOS -->
-                <span *osPerms="'agenda.can_manage_list_of_speakers'; complement: true">
-                    <mat-icon *ngIf="speaker.marked"> star </mat-icon>
-                </span>
+                                <!-- contra -->
+                                <button
+                                    mat-icon-button
+                                    (click)="onProContraButtons(speaker, false)"
+                                    matTooltip="{{ 'Contra speech' | translate }}"
+                                    *ngIf="enableProContraSpeech && !speaker.point_of_order"
+                                >
+                                    <mat-icon class="user-subtitle" *ngIf="speaker.pro_speech !== false"> remove_circle_outline </mat-icon>
+                                    <mat-icon class="red-warning-text" *ngIf="speaker.pro_speech === false">
+                                        remove_circle
+                                    </mat-icon>
+                                </button>
+
+                                <!-- mark -->
+                                <button
+                                    mat-icon-button
+                                    (click)="onMarkButton(speaker)"
+                                    matTooltip="{{ 'Contribution' | translate }}"
+                                    *ngIf="canMark(speaker) && !speaker.point_of_order"
+                                >
+                                    <mat-icon *ngIf="speaker.marked">star</mat-icon>
+                                    <mat-icon class="user-subtitle" *ngIf="!speaker.marked">star_border</mat-icon>                                </button>
+                            </ng-container>
+                        </span>
+
+                        <!-- Start and more button -->
+                        <span *osPerms="permission.agendaCanManageListOfSpeakers">
+                            <!-- start button -->
+                            <button
+                                mat-icon-button
+                                matTooltip="{{ 'Begin speech' | translate }}"
+                                (click)="onStartButton(speaker)"
+                            >
+                                <mat-icon>play_arrow</mat-icon>
+                            </button>
+
+                            <!-- more menu button -->
+                            <button
+                                mat-icon-button
+                                [matMenuTriggerFor]="manageSpeakerMenu"
+                                [matMenuTriggerData]="{ speaker: speaker }"
+                            >
+                                <mat-icon>more_vert</mat-icon>
+                            </button>
+                        </span>
+                    </div>
+                </div>
             </ng-template>
         </os-sorting-list>
     </div>
@@ -188,24 +270,63 @@
             <mat-icon>add</mat-icon>
             <span>{{ 'Add me' | translate }}</span>
         </button>
-        <button
-            *ngIf="isOpInWaitlist()"
-            mat-stroked-button
-            [disabled]="closed"
-            (click)="removeSpeaker()"
-        >
+        <button *ngIf="isOpInWaitlist()" mat-stroked-button [disabled]="closed" (click)="removeSpeaker()">
             <mat-icon>remove</mat-icon>
             <span>{{ 'Remove me' | translate }}</span>
         </button>
 
         <!-- Point Of order -->
-        <button mat-stroked-button color="warn" (click)="addPointOfOrder()" *ngIf="showPointOfOrders && !isOpInWaitlist(true)">
+        <button
+            mat-stroked-button
+            color="warn"
+            (click)="addPointOfOrder()"
+            *ngIf="showPointOfOrders && !isOpInWaitlist(true)"
+        >
             <mat-icon>warning</mat-icon>&nbsp;
             <span>{{ 'Point of order' | translate }}</span>
         </button>
-        <button mat-stroked-button color="warn" (click)="removePointOfOrder()" *ngIf="showPointOfOrders && isOpInWaitlist(true)">
+        <button
+            mat-stroked-button
+            color="warn"
+            (click)="removePointOfOrder()"
+            *ngIf="showPointOfOrders && isOpInWaitlist(true)"
+        >
             <mat-icon>remove</mat-icon>
             <span>{{ 'Withdraw point of order' | translate }}</span>
         </button>
     </div>
 </mat-card>
+
+<!-- admin menu for managing single speakers -->
+<mat-menu #manageSpeakerMenu>
+    <ng-template let-speaker="speaker" matMenuContent>
+        <ng-container *osPerms="permission.agendaCanManageListOfSpeakers">
+            <!-- pro button -->
+            <button mat-menu-item (click)="onProContraButtons(speaker, true)" *ngIf="enableProContraSpeech">
+                <mat-icon *ngIf="speaker.pro_speech !== true"> add_circle_outline </mat-icon>
+                <mat-icon class="green-text" *ngIf="speaker.pro_speech === true"> add_circle </mat-icon>
+                <span>{{ 'Pro speech' | translate }}</span>
+            </button>
+
+            <!-- contra button -->
+            <button mat-menu-item (click)="onProContraButtons(speaker, false)" *ngIf="enableProContraSpeech">
+                <mat-icon *ngIf="speaker.pro_speech !== false"> remove_circle_outline </mat-icon>
+                <mat-icon class="red-warning-text" *ngIf="speaker.pro_speech === false"> remove_circle </mat-icon>
+                <span>{{ 'Contra speech' | translate }}</span>
+            </button>
+
+            <!-- star button -->
+            <button mat-menu-item (click)="onMarkButton(speaker)">
+                <mat-icon>{{ speaker.marked ? 'star' : 'star_border' }}</mat-icon>
+                <span>{{ 'Contribution' | translate }}</span>
+            </button>
+
+            <mat-divider></mat-divider>
+            <!-- remove speaker from list -->
+            <button mat-menu-item (click)="removeSpeaker(speaker)">
+                <mat-icon color="warn">delete</mat-icon>
+                <span>{{ 'Remove' | translate }}</span>
+            </button>
+        </ng-container>
+    </ng-template>
+</mat-menu>
