--- a/client/src/app/shared/components/point-of-order-dialog/point-of-order-dialog.component.html
+++ b/client/src/app/shared/components/point-of-order-dialog/point-of-order-dialog.component.html
@@ -3,7 +3,7 @@
 </h2>
 
 <mat-dialog-content>
-    {{ 'Request' | translate }}
+    {{ 'Request' | translate }}:
     <form class="edit-form" [formGroup]="editForm">
         <mat-form-field>
             <input matInput osAutofocus [maxLength]="MAX_LENGTH" formControlName="note" />
