--- a/client/src/app/site/polls/components/entitled-users-table/entitled-users-table.component.html
+++ b/client/src/app/site/polls/components/entitled-users-table/entitled-users-table.component.html
@@ -23,7 +23,7 @@
         </div>
         <div *pblNgridCellDef="'delegation'; row as entry">
             <div *ngIf="entry.vote_delegated_to_id">
-                <span class="repr-prefix">represented by</span>&nbsp;
+                <span class="repr-prefix">{{ 'represented by' | translate }}</span>&nbsp;
                 <span *ngIf="entry.vote_delegated_to">{{ entry.vote_delegated_to.getFullName() }}</span>
                 <i *ngIf="!entry.vote_delegated_to">{{ 'Deleted user' | translate }}</i>
             </div>
