Allow LOS-Manager to see poll progress
Adjust poll progress bar to be visible for LOS-Manager.
Cleans up redundant permission asking
Adds push CD to progress bar to react better on permission changs

--- a/client/src/app/site/assignments/modules/assignment-poll/components/assignment-poll/assignment-poll.component.html
+++ b/client/src/app/site/assignments/modules/assignment-poll/components/assignment-poll/assignment-poll.component.html
@@ -76,9 +76,7 @@
         </div>
 
         <!-- Poll progress bar -->
-        <div *osPerms="'assignments.can_manage'; and: poll && poll.isStarted">
-            <os-poll-progress [poll]="poll"></os-poll-progress>
-        </div>
+        <os-poll-progress *ngIf="poll && poll.isStarted" [poll]="poll"></os-poll-progress>
 
         <!-- The Vote -->
         <os-assignment-poll-vote *ngIf="poll.canBeVotedFor()" [poll]="poll"></os-assignment-poll-vote>
