Fix LOS (closes #6035)

--- a/client/src/app/shared/components/list-of-speakers-content/list-of-speakers-content.component.html
+++ b/client/src/app/shared/components/list-of-speakers-content/list-of-speakers-content.component.html
@@ -141,7 +141,7 @@
                                     *ngIf="speaker.point_of_order"
                                     >warning</mat-icon
                                 >
-                                <i *ngIf="showSpeakersOrderNote" class="red-warning-text">
+                                <i class="red-warning-text">
                                     {{ speaker.note }}
                                 </i>
                             </ng-container>
