Added new translations (it, es).

--- a/client/src/app/shared/components/user-menu/user-menu.component.html
+++ b/client/src/app/shared/components/user-menu/user-menu.component.html
@@ -69,6 +69,8 @@
 <mat-menu #languageMenu="matMenu">
     <button mat-menu-item (click)="selectLang('en')">{{ getLangName('en') }}</button>
     <button mat-menu-item (click)="selectLang('de')">{{ getLangName('de') }}</button>
+    <button mat-menu-item (click)="selectLang('it')">{{ getLangName('it') }}</button>
+    <button mat-menu-item (click)="selectLang('es')">{{ getLangName('es') }}</button>
     <button mat-menu-item (click)="selectLang('ru')">{{ getLangName('ru') }}</button>
     <button mat-menu-item (click)="selectLang('cs')">{{ getLangName('cs') }}</button>
 </mat-menu>
