Add General x to analog polls
Adds general approval/rejection/abstain to analog polls
Fix a bug where the 100% base "Entitled" would render analog polls unusable
enumerate poll candidates

--- a/client/src/app/shared/components/assignment-poll-detail-content/assignment-poll-detail-content.component.html
+++ b/client/src/app/shared/components/assignment-poll-detail-content/assignment-poll-detail-content.component.html
@@ -49,7 +49,7 @@
                     </div>
                 </td>
             </tr>
-            <tr *ngIf="isPercentBaseEntitled" class="entitled-users-row">
+            <tr *ngIf="isPercentBaseEntitled && poll.entitled_users_at_stop" class="entitled-users-row">
                 <td>{{ 'Entitled users' | translate }}</td>
                 <td class="result">
                     <div class="single-result">
