remove Motion polls show global values
Motion polls were displaying global abstain, etc

--- a/client/src/app/site/assignments/modules/assignment-poll/components/assignment-poll-dialog/assignment-poll-dialog.component.html
+++ b/client/src/app/site/assignments/modules/assignment-poll/components/assignment-poll-dialog/assignment-poll-dialog.component.html
@@ -1,4 +1,5 @@
 <os-poll-form
+    [pollClassType]="pollClassType.Assignment"
     [data]="pollData"
     [pollService]="assignmentPollService"
     [pollMethods]="AssignmentPollMethodVerbose"
