--- a/client/src/app/site/motions/modules/motion-poll/motion-poll-dialog/motion-poll-dialog.component.html
+++ b/client/src/app/site/motions/modules/motion-poll/motion-poll-dialog/motion-poll-dialog.component.html
@@ -1,4 +1,5 @@
 <os-poll-form
+    [pollClassType]="pollClassType.Motion"
     [data]="pollData"
     [pollService]="motionPollService"
     [percentBases]="PercentBaseVerbose"
