Add own font for chyron
Alters Current Speakery Chyron, optionally shows the structure level in
a new line (slightly smaler, faint)
Font for user name in chyron can be configured
Support way more font mime types
Adds an own font for chyron (server, client)
Extends loads-font service
Cleanup countdown-time component from font loading

--- a/client/src/app/slides/agenda/current-speaker-chyron/current-speaker-chyron-slide.component.html
+++ b/client/src/app/slides/agenda/current-speaker-chyron/current-speaker-chyron-slide.component.html
@@ -1,8 +1,13 @@
-<div id="chyron" *ngIf="data" [ngStyle]="{
-    'background-color': data.data.background_color,
-    color: data.data.font_color}">
-
+<div
+    id="chyron"
+    *ngIf="data"
+    [ngStyle]="{
+        'background-color': data.data.background_color,
+        color: data.data.font_color
+    }"
+>
     <span id="inner">
-        <b>{{ data.data.current_speaker }}</b>
+        <div id="inner-name">{{ data.data.current_speaker_name }}</div>
+        <div id="inner-level">{{ data.data.current_speaker_level }}</div>
     </span>
 </div>
