--- a/client/src/assets/styles/font-variables.scss
+++ b/client/src/assets/styles/font-variables.scss
@@ -25,3 +25,8 @@ $font-weight-condensed-regular: 400;
 $font-monospace: 'OSFont Monospace';
 $font-monospace-src: url('../fonts/roboto-condensed-bold.woff') format('woff');
 $font-weight-monospace: 400;
+
+/** Special Chyron Name Font */
+$font-chyronname: 'OSFont ChyronName';
+$font-chyronname-src: url('../fonts/fira-sans-latin-400.woff') format('woff');
+$font-weight-chyronname: 400;
