--- a/client/src/app/slides/agenda/current-speaker-chyron/current-speaker-chyron-slide.component.scss
+++ b/client/src/app/slides/agenda/current-speaker-chyron/current-speaker-chyron-slide.component.scss
@@ -1,19 +1,33 @@
+@import '~assets/styles/fonts.scss';
+
 #chyron {
     position: absolute;
-    left: 0;
-    bottom: 0;
+    left: 50px;
+    bottom: 20px;
+    right: 0;
     z-index: 10;
-    width: 100%;
-    height: 100px;
+    height: 80px;
     font-size: 32px;
-    text-align: center;
-    line-height: 1.1;
-    display: table;
+    text-align: left;
+    line-height: 1;
+    opacity: 0.8;
 
     #inner {
-        display: table-cell;
         vertical-align: middle;
-        padding-left: 20px;
+        padding-left: 18px;
         padding-right: 20px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        height: 60px;
+        display: table-cell;
+
+        #inner-name {
+            font-family: $font-chyronname;
+        }
+
+        #inner-level {
+            margin-top: 5px;
+            font-size: 70%;
+        }
     }
 }
