--- a/client/src/assets/styles/fonts.scss
+++ b/client/src/assets/styles/fonts.scss
@@ -53,3 +53,12 @@
     font-weight: $font-weight-monospace;
     src: $font-monospace-src;
 }
+
+/** Chyron Name */
+@font-face {
+    font-family: $font-chyronname;
+    font-style: normal;
+    font-display: swap;
+    font-weight: $font-weight-chyronname;
+    src: $font-chyronname-src;
+}
