Hide cursor in full screen projector
Hides the cursor when hovering over the full screen projectors
containers

--- a/client/src/app/fullscreen-projector/fullscreen-projector/fullscreen-projector.component.html
+++ b/client/src/app/fullscreen-projector/fullscreen-projector/fullscreen-projector.component.html
@@ -1,5 +1,5 @@
 <div id="container" #container [osResized]="resizeSubject">
-    <div id="projector" [ngStyle]="projectorStyle">
+    <div id="projector" class="nocursor" [ngStyle]="projectorStyle">
         <os-projector *ngIf="projector" [projector]="projector"></os-projector>
     </div>
 </div>
