Enhance point-of-order dialog
Escape and enter do what they should

--- a/client/src/app/shared/components/point-of-order-dialog/point-of-order-dialog.component.html
+++ b/client/src/app/shared/components/point-of-order-dialog/point-of-order-dialog.component.html
@@ -2,18 +2,18 @@
     <span>{{ 'Are you sure you want to submit a point of order?' | translate }}</span>
 </h2>
 
-<mat-dialog-content>
-    {{ 'Request' | translate }}:
-    <form class="edit-form" [formGroup]="editForm">
+<form class="edit-form" [formGroup]="editForm" (ngSubmit)="onOk()">
+    <mat-dialog-content>
+        {{ 'Request' | translate }}:
         <mat-form-field>
             <input matInput osAutofocus [maxLength]="MAX_LENGTH" formControlName="note" />
         </mat-form-field>
-    </form>
-    {{ editForm.value.note.length }} / {{ MAX_LENGTH }}
-</mat-dialog-content>
-<mat-dialog-actions>
-    <button mat-button osAutofocus (click)="onOk()" color="accent" [disabled]="!this.editForm.valid">
-        {{ 'OK' | translate }}
-    </button>
-    <button mat-button (click)="onCancel()">{{ 'Cancel' | translate }}</button>
-</mat-dialog-actions>
+        {{ editForm.value.note.length }} / {{ MAX_LENGTH }}
+    </mat-dialog-content>
+    <mat-dialog-actions>
+        <button type="submit" mat-button osAutofocus color="accent" [disabled]="!this.editForm.valid">
+            {{ 'OK' | translate }}
+        </button>
+        <button type="button" mat-button (click)="onCancel()">{{ 'Cancel' | translate }}</button>
+    </mat-dialog-actions>
+</form>
