--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -729,6 +729,10 @@ button.mat-menu-item.selected {
     white-space: nowrap;
 }
 
+.break-word {
+    hyphens: auto;
+}
+
 .white {
     color: white;
 }
