Show point-of-order amount in speaker statistics
Shows the amount of point of orders in speaker statistics

--- a/client/src/app/site/common/components/user-statistics/user-statistics.component.html
+++ b/client/src/app/site/common/components/user-statistics/user-statistics.component.html
@@ -11,6 +11,10 @@
             <td>{{ numberOfWordRequests }}</td>
         </tr>
         <tr>
+            <td>{{ 'Thereof point of orders' | translate }}</td>
+            <td>{{ numberOfPoo }}</td>
+        </tr>
+        <tr>
             <td>{{ 'Unique speakers' | translate }}</td>
             <td>{{ numberOfUniqueSpeakers }}</td>
         </tr>
